workloads/livekit/rtc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: livekit-server-rtc
  namespace: matrix
  annotations:
    metallb.io/loadBalancerIPs: "192.168.6.22,fd00:6::22"
spec:
  ipFamilyPolicy: PreferDualStack
  ipFamilies: [IPv4, IPv6]
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: livekit-server
  ports:
    - name: rtc-tcp
      port: 7881
      targetPort: 7881
      protocol: TCP
    - name: rtc-udp
      port: 50000
      targetPort: 50000
      protocol: UDP
